samples/_failures_safe/1761205704_929039_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1320acb2.c: In function ‘bounding_box_volume’:
./samples/SAFE/__tmp_1320acb2.c:127:5: error: expected ‘,’ or ‘;’ at end of input
  127 |     double dz = box.max.z
      |     ^~~~~~
./samples/SAFE/__tmp_1320acb2.c:127:5: error: expected declaration or statement at end of input
